Remove CommandService & PowerShellExecutionService & Replace with Native Methods

--- a/src/Winhance.UI/Features/Common/Localization/af.json
+++ b/src/Winhance.UI/Features/Common/Localization/af.json
@@ -1085,8 +1085,8 @@
   "WIMUtil_Status_Extracting": "Onttrek ISO inhoud...",
   "WIMUtil_Status_IsoSelected": "ISO gekies, gereed om onttrekking te begin",
   "WIMUtil_Status_NoIsoSelected": "Geen ISO Gekies",
-  "WIMUtil_Status_WaitForConversion": "🔒 Wag vir omskakeling om te voltooi",
-  "WIMUtil_Status_CompleteStep1": "🔒 Voltooi Stap 1",
+  "WIMUtil_Status_WaitForConversion": "Wag vir omskakeling om te voltooi",
+  "WIMUtil_Status_CompleteStep1": "Voltooi Stap 1",
   "WIMUtil_Status_XmlAdded": "✓ XML Bygevoeg",
   "WIMUtil_Status_NoXmlAdded": "Geen XML Bygevoeg (Opsioneel)",
   "WIMUtil_Status_DriversAdded": "✓ Bestuurders Bygevoeg",
@@ -1459,6 +1459,14 @@
   "Review_Mode_Action_Install": "Gemerkte toepassings sal geïnstalleer word wanneer jy die konfigurasie toepas",
   "Review_Mode_Action_Remove": "Gemerkte toepassings sal verwyder word wanneer jy die konfigurasie toepas",
   "Review_Mode_Skip_Checkbox": "Slaan hersiening oor en pas onmiddellik toe",
+  "Config_Import_Options_WindowsApps": "Windows-toepassings:",
+  "Config_Import_Options_ExternalApps": "Eksterne toepassings:",
+  "Config_Import_Options_Install": "Installeer",
+  "Config_Import_Options_Uninstall": "Verwyder",
+  "Config_Import_Options_SelectOnly": "Kies slegs",
+  "Config_Import_Options_ThemeWallpaper": "Pas verstekagtergrond vir tema toe",
+  "Config_Import_Options_CleanTaskbar": "Maak taakbalk skoon",
+  "Config_Import_Options_CleanStartMenu": "Maak beginkieslys skoon",
   "Review_Mode_Status_AllMatch": "Alle instellings stem reeds ooreen met konfigurasie",
   "Review_Mode_Status_NoItems": "Geen konfigurasie-items om toe te pas nie",
   "Review_Mode_Action_ThemeWallpaper": "Pas die verstekmuurpapier vir hierdie tema toe?",
