--- a/src/Winhance.UI/Features/Common/Localization/cs.json
+++ b/src/Winhance.UI/Features/Common/Localization/cs.json
@@ -1085,8 +1085,8 @@
   "WIMUtil_Status_Extracting": "Extrahování obsahu ISO...",
   "WIMUtil_Status_IsoSelected": "ISO vybráno, připraveno k zahájení extrakce",
   "WIMUtil_Status_NoIsoSelected": "Nebylo vybráno žádné ISO",
-  "WIMUtil_Status_WaitForConversion": "🔒 Počkejte na dokončení převodu",
-  "WIMUtil_Status_CompleteStep1": "🔒 Dokončete krok 1",
+  "WIMUtil_Status_WaitForConversion": "Počkejte na dokončení převodu",
+  "WIMUtil_Status_CompleteStep1": "Dokončete krok 1",
   "WIMUtil_Status_XmlAdded": "✓ XML přidáno",
   "WIMUtil_Status_NoXmlAdded": "Nebylo přidáno žádné XML (volitelné)",
   "WIMUtil_Status_DriversAdded": "✓ Ovladače přidány",
@@ -1459,6 +1459,14 @@
   "Review_Mode_Action_Install": "Zaškrtnuté aplikace budou nainstalovány při aplikování konfigurace",
   "Review_Mode_Action_Remove": "Zaškrtnuté aplikace budou odebrány při aplikování konfigurace",
   "Review_Mode_Skip_Checkbox": "Přeskočit kontrolu a ihned aplikovat",
+  "Config_Import_Options_WindowsApps": "Aplikace Windows:",
+  "Config_Import_Options_ExternalApps": "Externí aplikace:",
+  "Config_Import_Options_Install": "Nainstalovat",
+  "Config_Import_Options_Uninstall": "Odinstalovat",
+  "Config_Import_Options_SelectOnly": "Pouze vybrat",
+  "Config_Import_Options_ThemeWallpaper": "Použít výchozí tapetu pro motiv",
+  "Config_Import_Options_CleanTaskbar": "Vyčistit hlavní panel",
+  "Config_Import_Options_CleanStartMenu": "Vyčistit nabídku Start",
   "Review_Mode_Status_AllMatch": "Všechna nastavení již odpovídají konfiguraci",
   "Review_Mode_Status_NoItems": "Žádné položky konfigurace k aplikování",
   "Review_Mode_Action_ThemeWallpaper": "Použít výchozí tapetu pro tento motiv?",
