--- a/src/Winhance.UI/Features/Common/Localization/de.json
+++ b/src/Winhance.UI/Features/Common/Localization/de.json
@@ -1085,8 +1085,8 @@
   "WIMUtil_Status_Extracting": "ISO-Inhalte werden extrahiert...",
   "WIMUtil_Status_IsoSelected": "ISO ausgewählt, bereit zum Starten der Extraktion",
   "WIMUtil_Status_NoIsoSelected": "Keine ISO ausgewählt",
-  "WIMUtil_Status_WaitForConversion": "🔒 Warten Sie auf den Abschluss der Konvertierung",
-  "WIMUtil_Status_CompleteStep1": "🔒 Schritt 1 abschließen",
+  "WIMUtil_Status_WaitForConversion": "Warten Sie auf den Abschluss der Konvertierung",
+  "WIMUtil_Status_CompleteStep1": "Schritt 1 abschließen",
   "WIMUtil_Status_XmlAdded": "✓ XML hinzugefügt",
   "WIMUtil_Status_NoXmlAdded": "Keine XML hinzugefügt (optional)",
   "WIMUtil_Status_DriversAdded": "✓ Treiber hinzugefügt",
@@ -1459,6 +1459,14 @@
   "Review_Mode_Action_Install": "Markierte Apps werden installiert, wenn Sie die Konfiguration anwenden",
   "Review_Mode_Action_Remove": "Markierte Apps werden entfernt, wenn Sie die Konfiguration anwenden",
   "Review_Mode_Skip_Checkbox": "Überprüfung überspringen und sofort anwenden",
+  "Config_Import_Options_WindowsApps": "Windows-Apps:",
+  "Config_Import_Options_ExternalApps": "Externe Apps:",
+  "Config_Import_Options_Install": "Installieren",
+  "Config_Import_Options_Uninstall": "Deinstallieren",
+  "Config_Import_Options_SelectOnly": "Nur auswählen",
+  "Config_Import_Options_ThemeWallpaper": "Standard-Hintergrundbild für Design anwenden",
+  "Config_Import_Options_CleanTaskbar": "Taskleiste bereinigen",
+  "Config_Import_Options_CleanStartMenu": "Startmenü bereinigen",
   "Review_Mode_Status_AllMatch": "Alle Einstellungen stimmen bereits mit der Konfiguration überein",
   "Review_Mode_Status_NoItems": "Keine Konfigurationselemente zum Anwenden",
   "Review_Mode_Action_ThemeWallpaper": "Das Standard-Hintergrundbild für dieses Design anwenden?",
