--- a/src/Winhance.UI/Features/Common/Localization/el.json
+++ b/src/Winhance.UI/Features/Common/Localization/el.json
@@ -1085,8 +1085,8 @@
   "WIMUtil_Status_Extracting": "Εξαγωγή περιεχομένων ISO...",
   "WIMUtil_Status_IsoSelected": "ISO επιλέχθηκε, έτοιμο για έναρξη εξαγωγής",
   "WIMUtil_Status_NoIsoSelected": "Δεν Επιλέχθηκε ISO",
-  "WIMUtil_Status_WaitForConversion": "🔒 Αναμονή για ολοκλήρωση μετατροπής",
-  "WIMUtil_Status_CompleteStep1": "🔒 Ολοκληρώστε το Βήμα 1",
+  "WIMUtil_Status_WaitForConversion": "Αναμονή για ολοκλήρωση μετατροπής",
+  "WIMUtil_Status_CompleteStep1": "Ολοκληρώστε το Βήμα 1",
   "WIMUtil_Status_XmlAdded": "✓ XML Προστέθηκε",
   "WIMUtil_Status_NoXmlAdded": "Δεν Προστέθηκε XML (Προαιρετικό)",
   "WIMUtil_Status_DriversAdded": "✓ Προγράμματα Οδήγησης Προστέθηκαν",
@@ -1459,6 +1459,14 @@
   "Review_Mode_Action_Install": "Οι επιλεγμένες εφαρμογές θα εγκατασταθούν όταν εφαρμόσετε τη διαμόρφωση",
   "Review_Mode_Action_Remove": "Οι επιλεγμένες εφαρμογές θα αφαιρεθούν όταν εφαρμόσετε τη διαμόρφωση",
   "Review_Mode_Skip_Checkbox": "Παράλειψη ελέγχου και άμεση εφαρμογή",
+  "Config_Import_Options_WindowsApps": "Εφαρμογές Windows:",
+  "Config_Import_Options_ExternalApps": "Εξωτερικές εφαρμογές:",
+  "Config_Import_Options_Install": "Εγκατάσταση",
+  "Config_Import_Options_Uninstall": "Απεγκατάσταση",
+  "Config_Import_Options_SelectOnly": "Μόνο επιλογή",
+  "Config_Import_Options_ThemeWallpaper": "Εφαρμογή προεπιλεγμένης ταπετσαρίας για το θέμα",
+  "Config_Import_Options_CleanTaskbar": "Καθαρισμός γραμμής εργασιών",
+  "Config_Import_Options_CleanStartMenu": "Καθαρισμός μενού Έναρξη",
   "Review_Mode_Status_AllMatch": "Όλες οι ρυθμίσεις ταιριάζουν ήδη με τη διαμόρφωση",
   "Review_Mode_Status_NoItems": "Δεν υπάρχουν στοιχεία διαμόρφωσης προς εφαρμογή",
   "Review_Mode_Action_ThemeWallpaper": "Εφαρμογή της προεπιλεγμένης ταπετσαρίας για αυτό το θέμα;",
