--- a/src/Winhance.UI/Features/Common/Localization/es.json
+++ b/src/Winhance.UI/Features/Common/Localization/es.json
@@ -1085,8 +1085,8 @@
   "WIMUtil_Status_Extracting": "Extrayendo contenido ISO...",
   "WIMUtil_Status_IsoSelected": "ISO seleccionado, listo para iniciar la extracción",
   "WIMUtil_Status_NoIsoSelected": "Ningún ISO Seleccionado",
-  "WIMUtil_Status_WaitForConversion": "🔒 Esperar a que la conversión se complete",
-  "WIMUtil_Status_CompleteStep1": "🔒 Completar Paso 1",
+  "WIMUtil_Status_WaitForConversion": "Esperar a que la conversión se complete",
+  "WIMUtil_Status_CompleteStep1": "Completar Paso 1",
   "WIMUtil_Status_XmlAdded": "✓ XML Añadido",
   "WIMUtil_Status_NoXmlAdded": "Ningún XML Añadido (Opcional)",
   "WIMUtil_Status_DriversAdded": "✓ Controladores Añadidos",
@@ -1459,6 +1459,14 @@
   "Review_Mode_Action_Install": "Las aplicaciones marcadas se instalarán cuando aplique la configuración",
   "Review_Mode_Action_Remove": "Las aplicaciones marcadas se eliminarán cuando aplique la configuración",
   "Review_Mode_Skip_Checkbox": "Omitir revisión y aplicar inmediatamente",
+  "Config_Import_Options_WindowsApps": "Aplicaciones de Windows:",
+  "Config_Import_Options_ExternalApps": "Aplicaciones externas:",
+  "Config_Import_Options_Install": "Instalar",
+  "Config_Import_Options_Uninstall": "Desinstalar",
+  "Config_Import_Options_SelectOnly": "Solo seleccionar",
+  "Config_Import_Options_ThemeWallpaper": "Aplicar fondo de pantalla predeterminado para el tema",
+  "Config_Import_Options_CleanTaskbar": "Limpiar barra de tareas",
+  "Config_Import_Options_CleanStartMenu": "Limpiar menú Inicio",
   "Review_Mode_Status_AllMatch": "Todos los ajustes ya coinciden con la configuración",
   "Review_Mode_Status_NoItems": "No hay elementos de configuración que aplicar",
   "Review_Mode_Action_ThemeWallpaper": "¿Aplicar el fondo de pantalla predeterminado para este tema?",
