--- a/src/Winhance.UI/Features/Common/Localization/fr.json
+++ b/src/Winhance.UI/Features/Common/Localization/fr.json
@@ -1085,8 +1085,8 @@
   "WIMUtil_Status_Extracting": "Extraction du contenu de l'ISO...",
   "WIMUtil_Status_IsoSelected": "ISO sélectionnée, prête à démarrer l'extraction",
   "WIMUtil_Status_NoIsoSelected": "Aucune ISO sélectionnée",
-  "WIMUtil_Status_WaitForConversion": "🔒 Attendre la fin de la conversion",
-  "WIMUtil_Status_CompleteStep1": "🔒 Terminer l'étape 1",
+  "WIMUtil_Status_WaitForConversion": "Attendre la fin de la conversion",
+  "WIMUtil_Status_CompleteStep1": "Terminer l'étape 1",
   "WIMUtil_Status_XmlAdded": "✓ XML ajouté",
   "WIMUtil_Status_NoXmlAdded": "Aucun XML ajouté (facultatif)",
   "WIMUtil_Status_DriversAdded": "✓ Pilotes ajoutés",
@@ -1459,6 +1459,14 @@
   "Review_Mode_Action_Install": "Les applications cochées seront installées lorsque vous appliquerez la configuration",
   "Review_Mode_Action_Remove": "Les applications cochées seront supprimées lorsque vous appliquerez la configuration",
   "Review_Mode_Skip_Checkbox": "Ignorer la vérification et appliquer immédiatement",
+  "Config_Import_Options_WindowsApps": "Applications Windows :",
+  "Config_Import_Options_ExternalApps": "Applications externes :",
+  "Config_Import_Options_Install": "Installer",
+  "Config_Import_Options_Uninstall": "Désinstaller",
+  "Config_Import_Options_SelectOnly": "Sélectionner uniquement",
+  "Config_Import_Options_ThemeWallpaper": "Appliquer le fond d'écran par défaut pour le thème",
+  "Config_Import_Options_CleanTaskbar": "Nettoyer la barre des tâches",
+  "Config_Import_Options_CleanStartMenu": "Nettoyer le menu Démarrer",
   "Review_Mode_Status_AllMatch": "Tous les paramètres correspondent déjà à la configuration",
   "Review_Mode_Status_NoItems": "Aucun élément de configuration à appliquer",
   "Review_Mode_Action_ThemeWallpaper": "Appliquer le fond d'écran par défaut pour ce thème ?",
