--- a/src/Winhance.UI/Features/Common/Localization/hi.json
+++ b/src/Winhance.UI/Features/Common/Localization/hi.json
@@ -1085,8 +1085,8 @@
   "WIMUtil_Status_Extracting": "आईएसओ सामग्री निकाली जा रही है...",
   "WIMUtil_Status_IsoSelected": "आईएसओ चयनित, निष्कर्षण शुरू करने के लिए तैयार",
   "WIMUtil_Status_NoIsoSelected": "कोई आईएसओ नहीं चुना गया",
-  "WIMUtil_Status_WaitForConversion": "🔒 रूपांतरण पूरा होने तक प्रतीक्षा करें",
-  "WIMUtil_Status_CompleteStep1": "🔒 चरण 1 पूरा करें",
+  "WIMUtil_Status_WaitForConversion": "रूपांतरण पूरा होने तक प्रतीक्षा करें",
+  "WIMUtil_Status_CompleteStep1": "चरण 1 पूरा करें",
   "WIMUtil_Status_XmlAdded": "✓ XML जोड़ा गया",
   "WIMUtil_Status_NoXmlAdded": "कोई XML नहीं जोड़ा गया (वैकल्पिक)",
   "WIMUtil_Status_DriversAdded": "✓ ड्राइवर जोड़े गए",
@@ -1459,6 +1459,14 @@
   "Review_Mode_Action_Install": "कॉन्फ़िग लागू करने पर चेक किए गए ऐप्स इंस्टॉल किए जाएंगे",
   "Review_Mode_Action_Remove": "कॉन्फ़िग लागू करने पर चेक किए गए ऐप्स हटाए जाएंगे",
   "Review_Mode_Skip_Checkbox": "समीक्षा छोड़ें और तुरंत लागू करें",
+  "Config_Import_Options_WindowsApps": "Windows ऐप्स:",
+  "Config_Import_Options_ExternalApps": "बाहरी ऐप्स:",
+  "Config_Import_Options_Install": "इंस्टॉल करें",
+  "Config_Import_Options_Uninstall": "अनइंस्टॉल करें",
+  "Config_Import_Options_SelectOnly": "केवल चयन करें",
+  "Config_Import_Options_ThemeWallpaper": "थीम के लिए डिफ़ॉल्ट वॉलपेपर लागू करें",
+  "Config_Import_Options_CleanTaskbar": "टास्कबार साफ़ करें",
+  "Config_Import_Options_CleanStartMenu": "स्टार्ट मेनू साफ़ करें",
   "Review_Mode_Status_AllMatch": "सभी सेटिंग्स पहले से कॉन्फ़िग से मेल खाती हैं",
   "Review_Mode_Status_NoItems": "लागू करने के लिए कोई कॉन्फ़िगरेशन आइटम नहीं",
   "Review_Mode_Action_ThemeWallpaper": "इस थीम के लिए डिफ़ॉल्ट वॉलपेपर लागू करें?",
