--- a/src/Winhance.UI/Features/Common/Localization/hu.json
+++ b/src/Winhance.UI/Features/Common/Localization/hu.json
@@ -1088,8 +1088,8 @@
   "WIMUtil_Status_Extracting": "ISO tartalom kicsomagolása...",
   "WIMUtil_Status_IsoSelected": "ISO kiválasztva, készen áll a kicsomagolás megkezdésére",
   "WIMUtil_Status_NoIsoSelected": "Nincs ISO kiválasztva",
-  "WIMUtil_Status_WaitForConversion": "🔒 Várjon, amíg a konvertálás befejeződik",
-  "WIMUtil_Status_CompleteStep1": "🔒 1. lépés befejezése",
+  "WIMUtil_Status_WaitForConversion": "Várjon, amíg a konvertálás befejeződik",
+  "WIMUtil_Status_CompleteStep1": "1. lépés befejezése",
   "WIMUtil_Status_XmlAdded": "✓ XML hozzáadva",
   "WIMUtil_Status_NoXmlAdded": "Nincs XML hozzáadva (választható)",
   "WIMUtil_Status_DriversAdded": "✓ Illesztőprogramok hozzáadva",
@@ -1459,6 +1459,14 @@
   "Review_Mode_Action_Install": "A kijelölt alkalmazások telepítésre kerülnek a konfiguráció alkalmazásakor",
   "Review_Mode_Action_Remove": "A kijelölt alkalmazások eltávolításra kerülnek a konfiguráció alkalmazásakor",
   "Review_Mode_Skip_Checkbox": "Áttekintés kihagyása és azonnali alkalmazás",
+  "Config_Import_Options_WindowsApps": "Windows alkalmazások:",
+  "Config_Import_Options_ExternalApps": "Külső alkalmazások:",
+  "Config_Import_Options_Install": "Telepítés",
+  "Config_Import_Options_Uninstall": "Eltávolítás",
+  "Config_Import_Options_SelectOnly": "Csak kiválasztás",
+  "Config_Import_Options_ThemeWallpaper": "Alapértelmezett háttérkép alkalmazása a témához",
+  "Config_Import_Options_CleanTaskbar": "Tálca tisztítása",
+  "Config_Import_Options_CleanStartMenu": "Start menü tisztítása",
   "Review_Mode_Status_AllMatch": "Minden beállítás már megegyezik a konfigurációval",
   "Review_Mode_Status_NoItems": "Nincsenek alkalmazandó konfigurációs elemek",
   "Review_Mode_Action_ThemeWallpaper": "Alkalmazza az alapértelmezett háttérképet ehhez a témához?",
