--- a/src/Winhance.UI/Features/Common/Localization/ja.json
+++ b/src/Winhance.UI/Features/Common/Localization/ja.json
@@ -1085,8 +1085,8 @@
   "WIMUtil_Status_Extracting": "ISOコンテンツを展開中...",
   "WIMUtil_Status_IsoSelected": "ISO選択済み、展開開始準備完了",
   "WIMUtil_Status_NoIsoSelected": "ISOが選択されていません",
-  "WIMUtil_Status_WaitForConversion": "🔒 変換完了まで待機",
-  "WIMUtil_Status_CompleteStep1": "🔒 手順1を完了してください",
+  "WIMUtil_Status_WaitForConversion": "変換完了まで待機",
+  "WIMUtil_Status_CompleteStep1": "手順1を完了してください",
   "WIMUtil_Status_XmlAdded": "✓ XML追加済み",
   "WIMUtil_Status_NoXmlAdded": "XML追加なし（オプション）",
   "WIMUtil_Status_DriversAdded": "✓ ドライバー追加済み",
@@ -1459,6 +1459,14 @@
   "Review_Mode_Action_Install": "チェックしたアプリは設定適用時にインストールされます",
   "Review_Mode_Action_Remove": "チェックしたアプリは設定適用時に削除されます",
   "Review_Mode_Skip_Checkbox": "レビューをスキップしてすぐに適用する",
+  "Config_Import_Options_WindowsApps": "Windows アプリ:",
+  "Config_Import_Options_ExternalApps": "外部アプリ:",
+  "Config_Import_Options_Install": "インストール",
+  "Config_Import_Options_Uninstall": "アンインストール",
+  "Config_Import_Options_SelectOnly": "選択のみ",
+  "Config_Import_Options_ThemeWallpaper": "テーマの既定の壁紙を適用",
+  "Config_Import_Options_CleanTaskbar": "タスクバーをクリーンアップ",
+  "Config_Import_Options_CleanStartMenu": "スタートメニューをクリーンアップ",
   "Review_Mode_Status_AllMatch": "すべての設定が既に設定と一致しています",
   "Review_Mode_Status_NoItems": "適用する設定項目がありません",
   "Review_Mode_Action_ThemeWallpaper": "このテーマの既定の壁紙を適用しますか？",
