--- a/src/Winhance.UI/Features/Common/Localization/lt.json
+++ b/src/Winhance.UI/Features/Common/Localization/lt.json
@@ -1085,8 +1085,8 @@
   "WIMUtil_Status_Extracting": "Išskleidžiamas ISO turinys...",
   "WIMUtil_Status_IsoSelected": "ISO pasirinktas, paruoštas pradėti išskleidimą",
   "WIMUtil_Status_NoIsoSelected": "Nepasirinktas joks ISO",
-  "WIMUtil_Status_WaitForConversion": "🔒 Palaukite, kol bus baigtas konvertavimas",
-  "WIMUtil_Status_CompleteStep1": "🔒 Užbaikite 1 žingsnį",
+  "WIMUtil_Status_WaitForConversion": "Palaukite, kol bus baigtas konvertavimas",
+  "WIMUtil_Status_CompleteStep1": "Užbaikite 1 žingsnį",
   "WIMUtil_Status_XmlAdded": "✓ XML pridėtas",
   "WIMUtil_Status_NoXmlAdded": "XML nepridėtas (pasirinktinai)",
   "WIMUtil_Status_DriversAdded": "✓ Tvarkyklės pridėtos",
@@ -1459,6 +1459,14 @@
   "Review_Mode_Action_Install": "Pažymėtos programos bus įdiegtos, kai pritaikysite konfigūraciją",
   "Review_Mode_Action_Remove": "Pažymėtos programos bus pašalintos, kai pritaikysite konfigūraciją",
   "Review_Mode_Skip_Checkbox": "Praleisti peržiūrą ir taikyti iš karto",
+  "Config_Import_Options_WindowsApps": "„Windows" programos:",
+  "Config_Import_Options_ExternalApps": "Išorinės programos:",
+  "Config_Import_Options_Install": "Įdiegti",
+  "Config_Import_Options_Uninstall": "Pašalinti",
+  "Config_Import_Options_SelectOnly": "Tik pasirinkti",
+  "Config_Import_Options_ThemeWallpaper": "Taikyti numatytąjį darbalaukio foną temai",
+  "Config_Import_Options_CleanTaskbar": "Išvalyti užduočių juostą",
+  "Config_Import_Options_CleanStartMenu": "Išvalyti pradžios meniu",
   "Review_Mode_Status_AllMatch": "Visi nustatymai jau atitinka konfigūraciją",
   "Review_Mode_Status_NoItems": "Nėra konfigūracijos elementų, kuriuos būtų galima pritaikyti",
   "Review_Mode_Action_ThemeWallpaper": "Pritaikyti numatytąjį šios temos darbalaukio foną?",
