--- a/src/Winhance.UI/Features/Common/Localization/lv.json
+++ b/src/Winhance.UI/Features/Common/Localization/lv.json
@@ -1459,6 +1459,14 @@
   "Review_Mode_Action_Install": "Atzīmētās lietotnes tiks instalētas, kad lietosiet konfigurāciju",
   "Review_Mode_Action_Remove": "Atzīmētās lietotnes tiks noņemtas, kad lietosiet konfigurāciju",
   "Review_Mode_Skip_Checkbox": "Izlaist pārskatīšanu un lietot nekavējoties",
+  "Config_Import_Options_WindowsApps": "Windows lietotnes:",
+  "Config_Import_Options_ExternalApps": "Ārējās lietotnes:",
+  "Config_Import_Options_Install": "Instalēt",
+  "Config_Import_Options_Uninstall": "Atinstalēt",
+  "Config_Import_Options_SelectOnly": "Tikai atlasīt",
+  "Config_Import_Options_ThemeWallpaper": "Lietot noklusējuma fona attēlu tēmai",
+  "Config_Import_Options_CleanTaskbar": "Iztīrīt uzdevumjoslu",
+  "Config_Import_Options_CleanStartMenu": "Iztīrīt sākuma izvēlni",
   "Review_Mode_Status_AllMatch": "Visi iestatījumi jau atbilst konfigurācijai",
   "Review_Mode_Status_NoItems": "Nav konfigurācijas vienumu, ko lietot",
   "Review_Mode_Action_ThemeWallpaper": "Lietot šīs tēmas noklusējuma fona attēlu?",
