--- a/src/Winhance.UI/Features/Common/Localization/nl.json
+++ b/src/Winhance.UI/Features/Common/Localization/nl.json
@@ -1085,8 +1085,8 @@
   "WIMUtil_Status_Extracting": "ISO-inhoud uitpakken...",
   "WIMUtil_Status_IsoSelected": "ISO geselecteerd, klaar om extractie te starten",
   "WIMUtil_Status_NoIsoSelected": "Geen ISO Geselecteerd",
-  "WIMUtil_Status_WaitForConversion": "🔒 Wacht op conversie om te voltooien",
-  "WIMUtil_Status_CompleteStep1": "🔒 Voltooi Stap 1",
+  "WIMUtil_Status_WaitForConversion": "Wacht op conversie om te voltooien",
+  "WIMUtil_Status_CompleteStep1": "Voltooi Stap 1",
   "WIMUtil_Status_XmlAdded": "✓ XML Toegevoegd",
   "WIMUtil_Status_NoXmlAdded": "Geen XML Toegevoegd (Optioneel)",
   "WIMUtil_Status_DriversAdded": "✓ Stuurprogramma\u0027s Toegevoegd",
@@ -1459,6 +1459,14 @@
   "Review_Mode_Action_Install": "Aangevinkte apps worden geïnstalleerd wanneer u de configuratie toepast",
   "Review_Mode_Action_Remove": "Aangevinkte apps worden verwijderd wanneer u de configuratie toepast",
   "Review_Mode_Skip_Checkbox": "Controle overslaan en direct toepassen",
+  "Config_Import_Options_WindowsApps": "Windows-apps:",
+  "Config_Import_Options_ExternalApps": "Externe apps:",
+  "Config_Import_Options_Install": "Installeren",
+  "Config_Import_Options_Uninstall": "Verwijderen",
+  "Config_Import_Options_SelectOnly": "Alleen selecteren",
+  "Config_Import_Options_ThemeWallpaper": "Standaardachtergrond voor thema toepassen",
+  "Config_Import_Options_CleanTaskbar": "Taakbalk opschonen",
+  "Config_Import_Options_CleanStartMenu": "Startmenu opschonen",
   "Review_Mode_Status_AllMatch": "Alle instellingen komen al overeen met de configuratie",
   "Review_Mode_Status_NoItems": "Geen configuratie-items om toe te passen",
   "Review_Mode_Action_ThemeWallpaper": "De standaardachtergrond voor dit thema toepassen?",
