--- a/src/Winhance.UI/Features/Common/Localization/pl.json
+++ b/src/Winhance.UI/Features/Common/Localization/pl.json
@@ -1085,8 +1085,8 @@
   "WIMUtil_Status_Extracting": "Rozpakowywanie zawartości ISO...",
   "WIMUtil_Status_IsoSelected": "Obraz ISO wybrany, gotowy do rozpoczęcia ekstrakcji",
   "WIMUtil_Status_NoIsoSelected": "Nie wybrano obrazu ISO",
-  "WIMUtil_Status_WaitForConversion": "🔒 Poczekaj na zakończenie konwersji",
-  "WIMUtil_Status_CompleteStep1": "🔒 Ukończ Krok 1",
+  "WIMUtil_Status_WaitForConversion": "Poczekaj na zakończenie konwersji",
+  "WIMUtil_Status_CompleteStep1": "Ukończ Krok 1",
   "WIMUtil_Status_XmlAdded": "✓ XML dodano",
   "WIMUtil_Status_NoXmlAdded": "Nie dodano XML (opcjonalnie)",
   "WIMUtil_Status_DriversAdded": "✓ Sterowniki dodano",
@@ -1459,6 +1459,14 @@
   "Review_Mode_Action_Install": "Zaznaczone aplikacje zostaną zainstalowane po zastosowaniu konfiguracji",
   "Review_Mode_Action_Remove": "Zaznaczone aplikacje zostaną usunięte po zastosowaniu konfiguracji",
   "Review_Mode_Skip_Checkbox": "Pomiń przegląd i zastosuj natychmiast",
+  "Config_Import_Options_WindowsApps": "Aplikacje Windows:",
+  "Config_Import_Options_ExternalApps": "Aplikacje zewnętrzne:",
+  "Config_Import_Options_Install": "Zainstaluj",
+  "Config_Import_Options_Uninstall": "Odinstaluj",
+  "Config_Import_Options_SelectOnly": "Tylko zaznacz",
+  "Config_Import_Options_ThemeWallpaper": "Zastosuj domyślną tapetę dla motywu",
+  "Config_Import_Options_CleanTaskbar": "Wyczyść pasek zadań",
+  "Config_Import_Options_CleanStartMenu": "Wyczyść menu Start",
   "Review_Mode_Status_AllMatch": "Wszystkie ustawienia już odpowiadają konfiguracji",
   "Review_Mode_Status_NoItems": "Brak elementów konfiguracji do zastosowania",
   "Review_Mode_Action_ThemeWallpaper": "Zastosować domyślną tapetę dla tego motywu?",
