--- a/src/Winhance.UI/Features/Common/Localization/pt-BR.json
+++ b/src/Winhance.UI/Features/Common/Localization/pt-BR.json
@@ -1085,8 +1085,8 @@
   "WIMUtil_Status_Extracting": "Extraindo conteúdo do ISO...",
   "WIMUtil_Status_IsoSelected": "ISO selecionado, pronto para iniciar a extração",
   "WIMUtil_Status_NoIsoSelected": "Nenhum ISO Selecionado",
-  "WIMUtil_Status_WaitForConversion": "🔒 Aguarde a conclusão da conversão",
-  "WIMUtil_Status_CompleteStep1": "🔒 Conclua a Etapa 1",
+  "WIMUtil_Status_WaitForConversion": "Aguarde a conclusão da conversão",
+  "WIMUtil_Status_CompleteStep1": "Conclua a Etapa 1",
   "WIMUtil_Status_XmlAdded": "✓ XML Adicionado",
   "WIMUtil_Status_NoXmlAdded": "Nenhum XML Adicionado (Opcional)",
   "WIMUtil_Status_DriversAdded": "✓ Drivers Adicionados",
@@ -1459,6 +1459,14 @@
   "Review_Mode_Action_Install": "Os aplicativos marcados serão instalados quando você aplicar a configuração",
   "Review_Mode_Action_Remove": "Os aplicativos marcados serão removidos quando você aplicar a configuração",
   "Review_Mode_Skip_Checkbox": "Pular revisão e aplicar imediatamente",
+  "Config_Import_Options_WindowsApps": "Aplicativos Windows:",
+  "Config_Import_Options_ExternalApps": "Aplicativos externos:",
+  "Config_Import_Options_Install": "Instalar",
+  "Config_Import_Options_Uninstall": "Desinstalar",
+  "Config_Import_Options_SelectOnly": "Apenas selecionar",
+  "Config_Import_Options_ThemeWallpaper": "Aplicar papel de parede padrão para o tema",
+  "Config_Import_Options_CleanTaskbar": "Limpar barra de tarefas",
+  "Config_Import_Options_CleanStartMenu": "Limpar menu Iniciar",
   "Review_Mode_Status_AllMatch": "Todas as configurações já correspondem à configuração",
   "Review_Mode_Status_NoItems": "Sem itens de configuração para aplicar",
   "Review_Mode_Action_ThemeWallpaper": "Aplicar o papel de parede padrão para este tema?",
