--- a/src/Winhance.UI/Features/Common/Localization/pt.json
+++ b/src/Winhance.UI/Features/Common/Localization/pt.json
@@ -1459,6 +1459,14 @@
   "Review_Mode_Action_Install": "As aplicações selecionadas serão instaladas quando aplicar a configuração",
   "Review_Mode_Action_Remove": "As aplicações selecionadas serão removidas quando aplicar a configuração",
   "Review_Mode_Skip_Checkbox": "Ignorar revisão e aplicar imediatamente",
+  "Config_Import_Options_WindowsApps": "Aplicações Windows:",
+  "Config_Import_Options_ExternalApps": "Aplicações externas:",
+  "Config_Import_Options_Install": "Instalar",
+  "Config_Import_Options_Uninstall": "Desinstalar",
+  "Config_Import_Options_SelectOnly": "Apenas selecionar",
+  "Config_Import_Options_ThemeWallpaper": "Aplicar papel de parede predefinido para o tema",
+  "Config_Import_Options_CleanTaskbar": "Limpar barra de tarefas",
+  "Config_Import_Options_CleanStartMenu": "Limpar menu Iniciar",
   "Review_Mode_Status_AllMatch": "Todas as definições já correspondem à configuração",
   "Review_Mode_Status_NoItems": "Sem itens de configuração para aplicar",
   "Review_Mode_Action_ThemeWallpaper": "Aplicar o papel de parede predefinido para este tema?",
