--- a/src/Winhance.UI/Features/Common/Localization/ru.json
+++ b/src/Winhance.UI/Features/Common/Localization/ru.json
@@ -1085,8 +1085,8 @@
   "WIMUtil_Status_Extracting": "Извлечение содержимого ISO...",
   "WIMUtil_Status_IsoSelected": "ISO выбран, готов к началу извлечения",
   "WIMUtil_Status_NoIsoSelected": "ISO не выбран",
-  "WIMUtil_Status_WaitForConversion": "🔒 Дождитесь завершения преобразования",
-  "WIMUtil_Status_CompleteStep1": "🔒 Выполните шаг 1",
+  "WIMUtil_Status_WaitForConversion": "Дождитесь завершения преобразования",
+  "WIMUtil_Status_CompleteStep1": "Выполните шаг 1",
   "WIMUtil_Status_XmlAdded": "✓ XML добавлен",
   "WIMUtil_Status_NoXmlAdded": "XML не добавлен (необязательно)",
   "WIMUtil_Status_DriversAdded": "✓ Драйверы добавлены",
@@ -1459,6 +1459,14 @@
   "Review_Mode_Action_Install": "Отмеченные приложения будут установлены при применении конфигурации",
   "Review_Mode_Action_Remove": "Отмеченные приложения будут удалены при применении конфигурации",
   "Review_Mode_Skip_Checkbox": "Пропустить просмотр и применить сразу",
+  "Config_Import_Options_WindowsApps": "Приложения Windows:",
+  "Config_Import_Options_ExternalApps": "Внешние приложения:",
+  "Config_Import_Options_Install": "Установить",
+  "Config_Import_Options_Uninstall": "Удалить",
+  "Config_Import_Options_SelectOnly": "Только выбрать",
+  "Config_Import_Options_ThemeWallpaper": "Применить обои по умолчанию для темы",
+  "Config_Import_Options_CleanTaskbar": "Очистить панель задач",
+  "Config_Import_Options_CleanStartMenu": "Очистить меню Пуск",
   "Review_Mode_Status_AllMatch": "Все настройки уже соответствуют конфигурации",
   "Review_Mode_Status_NoItems": "Нет элементов конфигурации для применения",
   "Review_Mode_Action_ThemeWallpaper": "Применить обои по умолчанию для этой темы?",
