--- a/src/Winhance.UI/Features/Common/Localization/sv.json
+++ b/src/Winhance.UI/Features/Common/Localization/sv.json
@@ -1085,8 +1085,8 @@
   "WIMUtil_Status_Extracting": "Extraherar ISO-innehåll...",
   "WIMUtil_Status_IsoSelected": "ISO vald, redo att starta extrahering",
   "WIMUtil_Status_NoIsoSelected": "Ingen ISO vald",
-  "WIMUtil_Status_WaitForConversion": "🔒 Vänta tills konverteringen är klar",
-  "WIMUtil_Status_CompleteStep1": "🔒 Slutför steg 1",
+  "WIMUtil_Status_WaitForConversion": "Vänta tills konverteringen är klar",
+  "WIMUtil_Status_CompleteStep1": "Slutför steg 1",
   "WIMUtil_Status_XmlAdded": "✓ XML tillagd",
   "WIMUtil_Status_NoXmlAdded": "Ingen XML tillagd (valfritt)",
   "WIMUtil_Status_DriversAdded": "✓ Drivrutiner tillagda",
@@ -1459,6 +1459,14 @@
   "Review_Mode_Action_Install": "Markerade appar kommer att installeras när du tillämpar konfigurationen",
   "Review_Mode_Action_Remove": "Markerade appar kommer att tas bort när du tillämpar konfigurationen",
   "Review_Mode_Skip_Checkbox": "Hoppa över granskning och tillämpa direkt",
+  "Config_Import_Options_WindowsApps": "Windows-appar:",
+  "Config_Import_Options_ExternalApps": "Externa appar:",
+  "Config_Import_Options_Install": "Installera",
+  "Config_Import_Options_Uninstall": "Avinstallera",
+  "Config_Import_Options_SelectOnly": "Välj endast",
+  "Config_Import_Options_ThemeWallpaper": "Använd standardbakgrund för temat",
+  "Config_Import_Options_CleanTaskbar": "Rensa aktivitetsfältet",
+  "Config_Import_Options_CleanStartMenu": "Rensa startmenyn",
   "Review_Mode_Status_AllMatch": "Alla inställningar matchar redan konfigurationen",
   "Review_Mode_Status_NoItems": "Inga konfigurationsobjekt att tillämpa",
   "Review_Mode_Action_ThemeWallpaper": "Tillämpa standardbakgrunden för detta tema?",
