--- a/src/Winhance.UI/Features/Common/Localization/uk.json
+++ b/src/Winhance.UI/Features/Common/Localization/uk.json
@@ -1085,8 +1085,8 @@
   "WIMUtil_Status_Extracting": "Розпакування вмісту ISO...",
   "WIMUtil_Status_IsoSelected": "ISO вибрано, готове до розпакування",
   "WIMUtil_Status_NoIsoSelected": "ISO не вибрано",
-  "WIMUtil_Status_WaitForConversion": "🔒 Зачекайте завершення перетворення",
-  "WIMUtil_Status_CompleteStep1": "🔒 Завершіть крок 1",
+  "WIMUtil_Status_WaitForConversion": "Зачекайте завершення перетворення",
+  "WIMUtil_Status_CompleteStep1": "Завершіть крок 1",
   "WIMUtil_Status_XmlAdded": "✓ XML додано",
   "WIMUtil_Status_NoXmlAdded": "XML не додано (необов'язково)",
   "WIMUtil_Status_DriversAdded": "✓ Драйвери додано",
@@ -1459,6 +1459,14 @@
   "Review_Mode_Action_Install": "Позначені програми будуть встановлені при застосуванні конфігурації",
   "Review_Mode_Action_Remove": "Позначені програми будуть видалені при застосуванні конфігурації",
   "Review_Mode_Skip_Checkbox": "Пропустити перегляд і застосувати одразу",
+  "Config_Import_Options_WindowsApps": "Програми Windows:",
+  "Config_Import_Options_ExternalApps": "Зовнішні програми:",
+  "Config_Import_Options_Install": "Встановити",
+  "Config_Import_Options_Uninstall": "Видалити",
+  "Config_Import_Options_SelectOnly": "Лише вибрати",
+  "Config_Import_Options_ThemeWallpaper": "Застосувати стандартні шпалери для теми",
+  "Config_Import_Options_CleanTaskbar": "Очистити панель завдань",
+  "Config_Import_Options_CleanStartMenu": "Очистити меню Пуск",
   "Review_Mode_Status_AllMatch": "Усі налаштування вже відповідають конфігурації",
   "Review_Mode_Status_NoItems": "Немає елементів конфігурації для застосування",
   "Review_Mode_Action_ThemeWallpaper": "Застосувати стандартні шпалери для цієї теми?",
