--- a/src/Winhance.UI/Features/Common/Localization/vi.json
+++ b/src/Winhance.UI/Features/Common/Localization/vi.json
@@ -1085,8 +1085,8 @@
   "WIMUtil_Status_Extracting": "Đang giải nén nội dung ISO...",
   "WIMUtil_Status_IsoSelected": "ISO đã được chọn, sẵn sàng để bắt đầu giải nén",
   "WIMUtil_Status_NoIsoSelected": "Không có ISO nào được chọn",
-  "WIMUtil_Status_WaitForConversion": "🔒 Chờ chuyển đổi hoàn tất",
-  "WIMUtil_Status_CompleteStep1": "🔒 Hoàn thành bước 1",
+  "WIMUtil_Status_WaitForConversion": "Chờ chuyển đổi hoàn tất",
+  "WIMUtil_Status_CompleteStep1": "Hoàn thành bước 1",
   "WIMUtil_Status_XmlAdded": "✓ XML đã được thêm",
   "WIMUtil_Status_NoXmlAdded": "Không có XML nào được thêm (Tùy chọn)",
   "WIMUtil_Status_DriversAdded": "✓ Trình điều khiển đã được thêm",
@@ -1459,6 +1459,14 @@
   "Review_Mode_Action_Install": "Các ứng dụng đã chọn sẽ được cài đặt khi bạn áp dụng cấu hình",
   "Review_Mode_Action_Remove": "Các ứng dụng đã chọn sẽ bị gỡ bỏ khi bạn áp dụng cấu hình",
   "Review_Mode_Skip_Checkbox": "Bỏ qua xem lại và áp dụng ngay",
+  "Config_Import_Options_WindowsApps": "Ứng dụng Windows:",
+  "Config_Import_Options_ExternalApps": "Ứng dụng bên ngoài:",
+  "Config_Import_Options_Install": "Cài đặt",
+  "Config_Import_Options_Uninstall": "Gỡ cài đặt",
+  "Config_Import_Options_SelectOnly": "Chỉ chọn",
+  "Config_Import_Options_ThemeWallpaper": "Áp dụng hình nền mặc định cho chủ đề",
+  "Config_Import_Options_CleanTaskbar": "Dọn dẹp thanh tác vụ",
+  "Config_Import_Options_CleanStartMenu": "Dọn dẹp menu Start",
   "Review_Mode_Status_AllMatch": "Tất cả cài đặt đã khớp với cấu hình",
   "Review_Mode_Status_NoItems": "Không có mục cấu hình nào để áp dụng",
   "Review_Mode_Action_ThemeWallpaper": "Áp dụng hình nền mặc định cho chủ đề này?",
