--- a/src/Winhance.UI/Features/Common/Localization/zh-Hans.json
+++ b/src/Winhance.UI/Features/Common/Localization/zh-Hans.json
@@ -1085,8 +1085,8 @@
   "WIMUtil_Status_Extracting": "正在提取 ISO 内容...",
   "WIMUtil_Status_IsoSelected": "已选择 ISO，准备开始提取",
   "WIMUtil_Status_NoIsoSelected": "未选择 ISO",
-  "WIMUtil_Status_WaitForConversion": "🔒 等待转换完成",
-  "WIMUtil_Status_CompleteStep1": "🔒 完成步骤 1",
+  "WIMUtil_Status_WaitForConversion": "等待转换完成",
+  "WIMUtil_Status_CompleteStep1": "完成步骤 1",
   "WIMUtil_Status_XmlAdded": "✓ XML 已添加",
   "WIMUtil_Status_NoXmlAdded": "未添加 XML（可选）",
   "WIMUtil_Status_DriversAdded": "✓ 驱动程序已添加",
@@ -1459,6 +1459,14 @@
   "Review_Mode_Action_Install": "应用配置时将安装已勾选的应用",
   "Review_Mode_Action_Remove": "应用配置时将移除已勾选的应用",
   "Review_Mode_Skip_Checkbox": "跳过审查并立即应用",
+  "Config_Import_Options_WindowsApps": "Windows 应用:",
+  "Config_Import_Options_ExternalApps": "外部应用:",
+  "Config_Import_Options_Install": "安装",
+  "Config_Import_Options_Uninstall": "卸载",
+  "Config_Import_Options_SelectOnly": "仅选择",
+  "Config_Import_Options_ThemeWallpaper": "应用主题的默认壁纸",
+  "Config_Import_Options_CleanTaskbar": "清理任务栏",
+  "Config_Import_Options_CleanStartMenu": "清理开始菜单",
   "Review_Mode_Status_AllMatch": "所有设置已与配置一致",
   "Review_Mode_Status_NoItems": "没有要应用的配置项",
   "Review_Mode_Action_ThemeWallpaper": "是否应用此主题的默认壁纸？",
