--- a/src/Winhance.UI/Features/Common/Localization/zh-Hant.json
+++ b/src/Winhance.UI/Features/Common/Localization/zh-Hant.json
@@ -1085,8 +1085,8 @@
   "WIMUtil_Status_Extracting": "正在解壓縮 ISO 內容...",
   "WIMUtil_Status_IsoSelected": "ISO 已選取，準備開始解壓縮",
   "WIMUtil_Status_NoIsoSelected": "未選取 ISO",
-  "WIMUtil_Status_WaitForConversion": "🔒 等待轉換完成",
-  "WIMUtil_Status_CompleteStep1": "🔒 完成步驟 1",
+  "WIMUtil_Status_WaitForConversion": "等待轉換完成",
+  "WIMUtil_Status_CompleteStep1": "完成步驟 1",
   "WIMUtil_Status_XmlAdded": "✓ XML 已加入",
   "WIMUtil_Status_NoXmlAdded": "未加入 XML (選用)",
   "WIMUtil_Status_DriversAdded": "✓ 驅動程式已加入",
@@ -1459,6 +1459,14 @@
   "Review_Mode_Action_Install": "套用設定時將安裝已勾選的應用程式",
   "Review_Mode_Action_Remove": "套用設定時將移除已勾選的應用程式",
   "Review_Mode_Skip_Checkbox": "略過檢閱並立即套用",
+  "Config_Import_Options_WindowsApps": "Windows 應用程式:",
+  "Config_Import_Options_ExternalApps": "外部應用程式:",
+  "Config_Import_Options_Install": "安裝",
+  "Config_Import_Options_Uninstall": "解除安裝",
+  "Config_Import_Options_SelectOnly": "僅選取",
+  "Config_Import_Options_ThemeWallpaper": "套用佈景主題的預設桌布",
+  "Config_Import_Options_CleanTaskbar": "清理工作列",
+  "Config_Import_Options_CleanStartMenu": "清理開始功能表",
   "Review_Mode_Status_AllMatch": "所有設定已與設定檔一致",
   "Review_Mode_Status_NoItems": "沒有要套用的設定項目",
   "Review_Mode_Action_ThemeWallpaper": "是否套用此佈景主題的預設桌布？",
