--- a/src/Winhance.UI/Features/Common/Localization/en.json
+++ b/src/Winhance.UI/Features/Common/Localization/en.json
@@ -131,6 +131,14 @@
   "Review_Mode_Action_Install": "Checked apps will be installed when you apply the config",
   "Review_Mode_Action_Remove": "Checked apps will be removed when you apply the config",
   "Review_Mode_Skip_Checkbox": "Skip review and apply immediately",
+  "Config_Import_Options_WindowsApps": "Windows Apps:",
+  "Config_Import_Options_ExternalApps": "External Apps:",
+  "Config_Import_Options_Install": "Install",
+  "Config_Import_Options_Uninstall": "Uninstall",
+  "Config_Import_Options_SelectOnly": "Select Only",
+  "Config_Import_Options_ThemeWallpaper": "Apply default wallpaper for theme",
+  "Config_Import_Options_CleanTaskbar": "Clean Taskbar",
+  "Config_Import_Options_CleanStartMenu": "Clean Start Menu",
   "Review_Mode_Status_AllMatch": "All settings already match config",
   "Review_Mode_Status_NoItems": "No configuration items to apply",
   "Review_Mode_Action_ThemeWallpaper": "Apply the default wallpaper for this theme?",
@@ -1115,8 +1123,8 @@
   "WIMUtil_Status_Extracting": "Extracting ISO contents...",
   "WIMUtil_Status_IsoSelected": "ISO selected, ready to start extraction",
   "WIMUtil_Status_NoIsoSelected": "No ISO Selected",
-  "WIMUtil_Status_WaitForConversion": "🔒 Wait for conversion to complete",
-  "WIMUtil_Status_CompleteStep1": "🔒 Complete Step 1",
+  "WIMUtil_Status_WaitForConversion": "Wait for conversion to complete",
+  "WIMUtil_Status_CompleteStep1": "Complete Step 1",
   "WIMUtil_Status_XmlAdded": "✓ XML Added",
   "WIMUtil_Status_NoXmlAdded": "No XML Added (Optional)",
   "WIMUtil_Status_DriversAdded": "✓ Drivers Added",
