--- a/src/Winhance.UI/Features/Common/Localization/it.json
+++ b/src/Winhance.UI/Features/Common/Localization/it.json
@@ -1085,8 +1085,8 @@
   "WIMUtil_Status_Extracting": "Estrazione del contenuto dell'ISO in corso...",
   "WIMUtil_Status_IsoSelected": "ISO selezionato, pronto per avviare l'estrazione",
   "WIMUtil_Status_NoIsoSelected": "Nessun ISO selezionato",
-  "WIMUtil_Status_WaitForConversion": "🔒 Attendi il completamento della conversione",
-  "WIMUtil_Status_CompleteStep1": "🔒 Completa il passaggio 1",
+  "WIMUtil_Status_WaitForConversion": "Attendi il completamento della conversione",
+  "WIMUtil_Status_CompleteStep1": "Completa il passaggio 1",
   "WIMUtil_Status_XmlAdded": "✓ XML aggiunto",
   "WIMUtil_Status_NoXmlAdded": "Nessun XML aggiunto (facoltativo)",
   "WIMUtil_Status_DriversAdded": "✓ Driver aggiunti",
@@ -1459,6 +1459,14 @@
   "Review_Mode_Action_Install": "Le app selezionate verranno installate quando applica la configurazione",
   "Review_Mode_Action_Remove": "Le app selezionate verranno rimosse quando applica la configurazione",
   "Review_Mode_Skip_Checkbox": "Salta la revisione e applica immediatamente",
+  "Config_Import_Options_WindowsApps": "App di Windows:",
+  "Config_Import_Options_ExternalApps": "App esterne:",
+  "Config_Import_Options_Install": "Installa",
+  "Config_Import_Options_Uninstall": "Disinstalla",
+  "Config_Import_Options_SelectOnly": "Solo selezione",
+  "Config_Import_Options_ThemeWallpaper": "Applica lo sfondo predefinito per il tema",
+  "Config_Import_Options_CleanTaskbar": "Pulisci barra delle applicazioni",
+  "Config_Import_Options_CleanStartMenu": "Pulisci menu Start",
   "Review_Mode_Status_AllMatch": "Tutte le impostazioni corrispondono già alla configurazione",
   "Review_Mode_Status_NoItems": "Nessun elemento di configurazione da applicare",
   "Review_Mode_Action_ThemeWallpaper": "Applicare lo sfondo predefinito per questo tema?",
